--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,8 +13,8 @@
 <nav th:fragment="navigation">
     <a href="/cheese">List</a> |
     <a href="/cheese/add">Add</a> |
-    <a href="/cheese/remove">Remove</a>
-    <a href="/category">Category</a>
+    <a href="/cheese/remove">Remove</a> |
+    <a href="/category">Categories</a>
 </nav>
 
 </body>
